TEST_PROGRAMS/VALID/shortvarDecl.go
package main


func main() {

        x :=1;

        for ;;{ //not supported in golite
              println(x)
              x++;
              break;
        }
}
